# api-daemon

./: .gitignore  .gitlab-ci.yml  .gitmodules  Android.mk  Cargo.toml  README.md  build_package.sh  changelog.txt  daily.sh  deny.toml  push.sh  release_libs.sh  set_version.sh  testclient_release.sh  update-prebuilts.sh  update-vendor.sh  utils.sh
.cargo/: config
child-test-daemon/: Cargo.toml  xcompile.sh
child-test-daemon/src/: main.rs
codegen/: Cargo.toml  clippy.toml  common_types.sidl
codegen/src/: ast_utils.rs  config.rs  doc_javascript.rs  helpers.rs  javascript.rs  lib.rs  rust_common.rs  rust_service.rs
codegen/src/templates/: javascript_html.handlebars  javascript_md.handlebars  style.css
common/: Cargo.toml  bindgen.sh  build.rs  ipc.txt  selinux.h
common/client/: .gitignore  .yarn-integrity  package.json  webpack.config.js  webpack.config.libcore.js  webpack.config.libcore.prod.js  webpack.config.prod.js
common/client/src/: bincode.js  core.js  services.js  session.js  sessionobject.js  ws_transport.js
common/src/: build_helper.rs  core.rs  device_info.rs  frame.rs  lib.rs  object_tracker.rs  observers.rs  remotable.rs  remote_service.rs  remote_services_registrar.rs  selinux.rs  socket_pair.rs  tokens.rs  traits.rs  ucan.rs
common/test-fixtures/: valid_build_props.txt
common/tests/: services1.toml  services2.toml
daemon/: .gitignore  Cargo.toml  build.rs  config-appscmd.toml  config-device.toml  config-webdriver.toml  config.toml  push.sh  valid_test_config.toml  xcompile.sh
daemon/src/: api_server.rs  cache_middleware.rs  config.rs  crash_uploader.rs  global_context.rs  main.rs  services_macro.rs  session.rs  session_counter.rs  shared_state.rs  tokens.rs  tor.rs  uds_server.rs  webruntime_connection.rs
daemon/tests/fota-workspace/: config.json  record.json
native-build-deps/: Cargo.toml  build.rs
services/accounts/: Cargo.toml
services/accounts/client/: manifest.webmanifest
services/apps/: .gitignore  Cargo.toml  build.rs  settings.sqlite
services/apps/appscmd/: .gitignore  Cargo.toml  README.md  changelog.txt  xcompile.sh
services/apps/client/: manifest.webmanifest  package.json  webpack.config.js
services/apps/src/: apps.sidl  apps_actor.rs  apps_item.rs  apps_registry.rs  apps_request.rs  apps_storage.rs  apps_utils.rs  config.rs  deeplinks.rs  downloader.rs  lib.rs  manifest.rs  registry_db.rs  service.rs  shared_state.rs  tasks.rs  update_manifest.rs  update_scheduler.rs
services/apps/test-fixtures/: push.sh  pwa_update_manifest.webmanifest  sample_app_manifest_1.webapp  sample_app_manifest_1.webmanifest  sample_app_manifest_2.webapp  sample_app_manifest_3.webapp  sample_update_manifest.webapp  sample_update_manifest.webmanifest
services/contacts/: .gitignore  Cargo.toml  build.rs  clippy.toml
services/contacts/client/: gen_common.sh  manifest.webmanifest  package.json  webpack.config.js
services/contacts/src/: contacts.sidl  cursor.rs  db.rs  lib.rs  preload.rs  service.rs
services/contacts/test-fixtures/: contacts.json  contacts_2000.vcf  contacts_6.vcf  contacts_incorrect.json
services/contentmanager/: .gitignore  Cargo.toml  build.rs
services/contentmanager/client/: webpack.config.js  webpack.config.prod.js
services/contentmanager/src/: config.rs  contentmanager.sidl  cursor.rs  db.rs  lib.rs  service.rs  ucan.rs  utils.rs
services/devicecapability/: Cargo.toml  build.rs  devicecapability.json
services/devicecapability/client/: manifest.webmanifest  package.json  webpack.config.js
services/devicecapability/src/: config.rs  devicecapability.sidl  lib.rs  service.rs
services/deviceconfig/: Cargo.toml
services/deviceconfig/client/: manifest.webmanifest
services/dweb/: Cargo.toml  build.rs
services/dweb/client/: webpack.config.js
services/dweb/src/: config.rs  did.rs  dweb.sidl  handshake.rs  http.rs  lib.rs  mdns.rs  service.rs  sidl_ucan.rs  storage.rs
services/evm/: Cargo.toml  build.rs
services/evm/src/: evm.sidl  lib.rs  provider.rs  service.rs
services/fota/: Cargo.toml
services/fota/client/: manifest.webmanifest
services/geckobridge/: Cargo.toml  build.rs
services/geckobridge/src/: geckobridge.sidl  lib.rs  service.rs  state.rs
services/libsignal/: Cargo.toml  build.rs  clippy.toml
services/libsignal/client/: manifest.webmanifest  webpack.config.js
services/libsignal/src/: crypto_utils.rs  download_decrypt.rs  global_context.rs  group_cipher.rs  group_session_builder.rs  lib.rs  libsignal.sidl  service.rs  session_builder.rs  session_cipher.rs  store_context.rs
services/libsignal/test-fixtures/: example2  example3  result2
services/powermanager/: Cargo.toml  build.rs
services/powermanager/client/: manifest.webmanifest  package.json  webpack.config.js
services/powermanager/src/: lib.rs  powermanager.sidl  screen.sidl  service.rs
services/procmanager/: Cargo.toml  DESIGN.txt  README.md  build.rs
services/procmanager/client/: package.json  webpack.config.js  webpack.config.prod.js
services/procmanager/src/: android_worker.rs  cgroups.rs  config.rs  fallback_worker.rs  lib.rs  procmanager.sidl  service.rs  tests.rs
services/procmanager/tests/: test.html
services/settings/: .gitignore  Cargo.toml  build.rs
services/settings/client/: manifest.webmanifest  webpack.config.js
services/settings/src/: db.rs  lib.rs  service.rs  settings.sidl
services/settings/test-fixtures/: settings.json  settings_2.json
services/tcpsocket/: Cargo.toml  build.rs
services/tcpsocket/client/: manifest.webmanifest  package.json  webpack.config.js  webpack.config.prod.js
services/tcpsocket/src/: lib.rs  private_traits.rs  service.rs  tcpsocket.rs  tcpsocket.sidl
services/telephony/: Cargo.toml
services/test/: Cargo.toml  build.rs
services/time/: .gitignore  Cargo.toml  build.rs
support/hamster/: Cargo.toml
support/kauth/: .gitignore  Cargo.toml
support/kota/: Cargo.toml
support/kus/: Cargo.toml
telemetry/: Cargo.toml  build.rs
vhost/: Cargo.toml  cert.pem  certs.conf  create_cert.sh  key.pem
vhost/src/: config.rs  etag.rs  lib.rs  vhost_handler.rs
(+268 files in other folders)
