
[workspace]
members = [
  "child-test-daemon/",
  "codegen/",
  "common/",
  "daemon/",
  "native-build-deps/",
  "parser/",
  "services/apps",
  "services/apps/appscmd",
  "services/audiovolumemanager",
  "services/contacts",
  "services/contentmanager",
  "services/devicecapability",
  "services/geckobridge",
  "services/libsignal",
  "services/powermanager",
  "services/procmanager",
  "services/settings",
  "services/tcpsocket",
  "services/test",
  "services/time",
  "support/android-utils/",
  "support/hidl-utils/",
  "support/libsignal-sys/",
  "support/light/",
  "support/power",
  "support/sqlite-utils",
  "tests/driver",
  "tests/apps-test-server",
  "vhost/",
]

[patch.crates-io]
# Bump parking-lot and tokio-util
actix = {git = "https://github.com/fabricedesre/actix.git", branch = "parking-lot-0.12"}
# Bump tokio-util
h2 = {git = "https://github.com/fabricedesre/h2.git"}
# Bump base64 and cookie to avoid duplicates.
webdriver = {path = "support/webdriver"}
# Use our fork with the extra feature for vhost
zip = {path = "support/zip"}
# For the sha-1 update
pest = {git = "https://github.com/fabricedesre/pest.git"}
pest_derive = {git = "https://github.com/fabricedesre/pest.git"}
pest_generator = {git = "https://github.com/fabricedesre/pest.git"}
pest_meta = {git = "https://github.com/fabricedesre/pest.git"}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
