
[workspace]
members = [
  "child-test-daemon/",
  "codegen/",
  "common/",
  "daemon/",
  "native-build-deps/",
  "parser/",
  "services/apps",
  "services/apps/appscmd",
  "services/audiovolumemanager",
  "services/contacts",
  "services/contentmanager",
  "services/devicecapability",
  "services/dweb",
  "services/evm",
  "services/geckobridge",
  "services/libsignal",
  "services/powermanager",
  "services/procmanager",
  "services/settings",
  "services/tcpsocket",
  "services/test",
  "services/time",
  "support/android-utils/",
  "support/hidl-utils/",
  "support/libsignal-sys/",
  "support/light/",
  "support/power",
  "support/sqlite-utils",
  "tests/driver",
  "tests/apps-test-server",
  "vhost/",
]

[patch.crates-io]
# Use our fork with the extra feature for vhost
zip = {path = "support/zip"}
# Fork to downgrade cc
iana-time-zone-haiku = {git = "https://github.com/capyloon/iana-time-zone.git"}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
