[package]
name = "child-test-daemon"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"

# Child daemon exposing the test service

[dependencies]
bincode = "1.3"
common = { path = "../common" }
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
test_service = { path = "../services/test" }
nix = "0.19"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"
