[package]
name = "sidl_codegen"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
clap = "2.26"
env_logger = "0.8"
handlebars = "4.0"
heck = "0.3"
log = "0.4"
serde_json = "1.0"
sidl_parser = { path = "../parser" }
thiserror = "1.0"
sha2 = "0.9"
