[package]
name = "common"
version = "0.2.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"

[dependencies]
actix = "0.10"
android_utils = { path = "../support/android-utils" }
bincode = "1.3"
byteorder = "1.3"
dyn-clone = "1.0"
libc = "0.2"
log = "0.4"
nix = "0.17"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sidl_codegen = { path = "../codegen" }
thiserror = "1.0"
toml = "0.4"
