[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"
name = "common"
version = "0.2.0"

[dependencies]
actix = "0.12"
android_utils = {path = "../support/android-utils"}
bincode = "1.3"
byteorder = "1.3"
dyn-clone = "1.0"
libc = "0.2"
log = "0.4"
nix = "0.19"
parking_lot = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1.0"
sidl_codegen = {path = "../codegen"}
thiserror = "1.0"
threadpool = "1.8"
toml = "0.4"
url = {version = "2.2", features = ["serde"]}
