[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"
name = "common"
version = "0.2.0"

[dependencies]
actix = "0.13"
android_utils = {path = "../support/android-utils"}
bincode = "1.3"
byteorder = "1.3"
did-key = {git = "https://github.com/capyloon/did-key.rs.git", rev = "a608794d20a4c1b2c8155d2074f7b1dbe4092fb7"}
dyn-clone = "1.0"
file-rotate = "0.6"
libc = "0.2"
log = "0.4"
nix = "0.23"
parking_lot = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1.0"
sidl_codegen = {path = "../codegen"}
thiserror = "1.0"
threadpool = "1.8"
toml = "0.5"
url = {version = "2.2", features = ["serde"]}
