[package]
name = "daemon"
version = "3.2.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "api-daemon"
path = "src/main.rs"

[features]
default = ["apps-service",
           "audiovolumemanager-service",
           "breakpad",
           "contacts-service",
           "devicecapability-service",
           "geckobridge-service",
           "libsignal-service",
           "powermanager-service",
           "procmanager-service",
           "tcpsocket-service",
           "settings-service",
           "time-service",
           "virtual-host"]
# Enable the apps service
apps-service = ["apps_service"]
# Enable audio volume mainnager
audiovolumemanager-service = ["audiovolume_service"]
# Enable the breakpad.
breakpad = ["breakpad_sys"]
# Enable the contacts service.
contacts-service = ["contacts_service"]
# Enable daemonize
daemon = ["daemonize"]
# Enable the device capability service.
devicecapability-service = ["devicecapability_service"]
# Enable the Gecko Bridge service
geckobridge-service = ["geckobridge"]
# Enable the libsignal protocol service.
libsignal-service = ["libsignal_service"]
# Enable the powermanager service.
powermanager-service = ["powermanager_service"]
# Enable the procmanager service
procmanager-service = ["procmanager_service"]
# Enable the tcpsocket service.
tcpsocket-service = ["tcpsocket_service"]
# Enable the telephony service.
settings-service = ["settings_service"]
# Enable the time service.
time-service = ["time_service"]
# Enable the vhost http server
virtual-host = ["vhost_server"]

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-http = "2.2"
actix-web = { version = "3.0", features = ["rust-tls"] }
actix-web-actors = "3.0"
actix-rt = "1.1"
apps_service = { path = "../services/apps", optional = true }
async-std = "1.6"
audiovolume_service = {path = "../services/audiovolumemanager", optional = true}
bincode = "1.3"
breakpad_sys = { git = "ssh://git@git.kaiostech.com/KaiOS/breakpad-sys.git", optional = true }
common = { path = "../common" }
contacts_service = { path = "../services/contacts", optional = true }
daemonize = { version = "0.4.1", optional = true }
devicecapability_service = { path = "../services/devicecapability", optional = true }
flate2 = "1.0"
futures-core = "0.3"
futures-util = "0.3"
libsignal_service = { path = "../services/libsignal", optional = true }
geckobridge = { path = "../services/geckobridge", optional = true }
log = "0.4"
mime_guess = "2.0"
nix = "0.19"
parking_lot = "0.11"
read-byte-slice = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
rusty-s3 = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
settings_service = { path = "../services/settings", optional = true }
signal-hook = "0.3"
tcpsocket_service = { path = "../services/tcpsocket", optional = true }
thiserror = "1.0"
time_service = { path = "../services/time", optional = true }
toml = "0.4"
powermanager_service = { path = "../services/powermanager", optional = true }
procmanager_service = { path = "../services/procmanager", optional = true }
vhost_server = { path = "../vhost", optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"
android_utils = { path = "../support/android-utils" }

[dev-dependencies]
actix-web-actors = "3.0"
futures-util = "0.3"
rand = "*"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }

[build-dependencies]
vergen = "3.0"
