[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"
name = "daemon"
version = "3.5.0"

[[bin]]
name = "api-daemon"
path = "src/main.rs"

[features]
default = [
  "apps-service",
  "audiovolumemanager-service", # "breakpad",
  "contacts-service",
  "contentmanager-service",
  "devicecapability-service",
  "dweb-service",
  "geckobridge-service", # "libsignal-service",
  "powermanager-service",
  "procmanager-service",
  "tcpsocket-service",
  "settings-service",
  "time-service",
  "virtual-host",
]
# Enable the apps service
apps-service = ["apps_service"]
# Enable audio volume mainnager
audiovolumemanager-service = ["audiovolume_service"]
# Enable the breakpad.
breakpad = ["breakpad_sys"]
# Enable the contacts service.
contacts-service = ["contacts_service"]
# Enable the content manager service.
contentmanager-service = ["contentmanager_service"]
# Enable daemonize
daemon = ["daemonize"]
# Enable the device capability service.
devicecapability-service = ["devicecapability_service"]
# Enable the dweb service.
dweb-service = ["dweb_service"]
# Enable the Gecko Bridge service
geckobridge-service = ["geckobridge"]
# Enable the libsignal protocol service.
libsignal-service = ["libsignal_service"]
# Enable the powermanager service.
powermanager-service = ["powermanager_service"]
# Enable the procmanager service
procmanager-service = ["procmanager_service"]
# Enable the tcpsocket service.
tcpsocket-service = ["tcpsocket_service"]
# Enable the telephony service.
settings-service = ["settings_service"]
# Enable the time service.
time-service = ["time_service"]
# Enable the vhost http server
virtual-host = ["vhost_server"]

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-http = "3.0"
actix-rt = "2.6"
actix-web = "4.0"
actix-web-actors = "4.0"
anyhow = "1.0"
apps_service = {path = "../services/apps", optional = true}
arti = {git = "https://github.com/capyloon/arti.git", default-features = false, features = ["tokio", "rustls"]}
arti-client = {git = "https://github.com/capyloon/arti.git", default-features = false, features = ["tokio", "rustls"]}
arti-config = {git = "https://github.com/capyloon/arti.git"}
tor-rtcompat = {git = "https://github.com/capyloon/arti.git", default-features = false, features = ["tokio", "rustls"]}

audiovolume_service = {path = "../services/audiovolumemanager", optional = true}
bincode = "1.3"
breakpad_sys = {git = "ssh://git@git.kaiostech.com/KaiOS/breakpad-sys.git", branch = "update-bindgen", optional = true}
common = {path = "../common"}
contacts_service = {path = "../services/contacts", optional = true}
contentmanager_service = {path = "../services/contentmanager", optional = true}
daemonize = {version = "0.4.1", optional = true}
devicecapability_service = {path = "../services/devicecapability", optional = true}
dweb_service = {path = "../services/dweb", optional = true}
flate2 = "1.0"
futures = "0.3"
futures-util = "0.3"
geckobridge = {path = "../services/geckobridge", optional = true}
libsignal_service = {path = "../services/libsignal", optional = true}
log = "0.4"
mime_guess = "2.0"
nix = "0.23"
parking_lot = "0.12"
powermanager_service = {path = "../services/powermanager", optional = true}
procmanager_service = {path = "../services/procmanager", optional = true}
reqwest = {version = "0.11", default-features = false, features = ["blocking", "rustls-tls"]}
rusty-s3 = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
settings_service = {path = "../services/settings", optional = true}
signal-hook = "0.3"
tcpsocket_service = {path = "../services/tcpsocket", optional = true}
thiserror = "1.0"
time_service = {path = "../services/time", optional = true}
tokio = {version = "1", features = ["full"]}
tokio-util = "0.7"
toml = "0.5"
vhost_server = {path = "../vhost", optional = true}
wspty = {git = "https://github.com/capyloon/wspty.git"}

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"
android_utils = {path = "../support/android-utils"}

[dev-dependencies]
actix-web-actors = "4.0"
futures-util = "0.3"
rand = "*"
reqwest = {version = "0.11", default-features = false, features = ["blocking", "rustls-tls"]}

[build-dependencies]
vergen = "3.0"
