[package]
name = "telemetry"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "KaiOS"
publish = false

[dependencies]
android_utils = { path = "../support/android-utils" }
base64 = "0.13"
common = { path = "../common" }
kauth = { path = "../support/kauth" }
libc = "0.2"
log = "0.4"
procfs = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.2"
url = "2.1"
zip = "0.5.10"
