[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"
name = "vhost_server"
version = "0.1.0"

[dependencies]
actix-cors = "0.6"
actix-rt = "2.6"
actix-web = "4.0"
async-trait = "0.1"
blake2 = "0.10"
common = {path = "../common"}
log = "0.4"
new_mime_guess = "4.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["fs"]}
tokio-util = "0.7"
zip = {path = "../support/zip"}

[dev-dependencies]
actix-http = "3.0"
awc = "3.0.0-beta"
env_logger = "0.8"
futures = "0.3"
