[package]
name = "accounts_service"
version = "0.1.0"
authors = ["viga.li <viga.li@kaiostech.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
log = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
common = { path = "../../common" }
