[package]
name = "apps_service"
version = "0.1.0"
authors = ["Seinlin Li<seinlin.li@kaiostech.com> "]
edition = "2018"
license = "Apache-2.0"

[dependencies]
actix-rt = "1.0"
android_utils = { path = "../../support/android-utils" }
assert-json-diff = "1.1.0"
base64 = "0.13"
blake2 = "0.9"
common = { path = "../../common" }
geckobridge = { path = "../geckobridge" }
http = "0.2.1"
log = "0.4"
mkstemp-rs = "1.0.0"
nix = "0.19"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.25", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
settings_service = { path = "../../services/settings" }
sqlite-utils = { path = "../../support/sqlite-utils" }
thiserror = "1.0"
threadpool = "1.7"
time = "0.2"
url = "2.1"
version-compare = "0.0.10"
vhost_server = { path = "../../vhost" }
zip = "0.5.10"
zip_utils = { git = "ssh://git@git.kaiostech.com/KaiOS/zip_utils.git", branch="master" }

[build-dependencies]
common = { path = "../../common" }

[dev-dependencies]
actix-web = { version = "3.0", features = ["rustls"] }
actix-rt = "1.1"
env_logger = "0.8"
hawk = { git = "https://github.com/fabricedesre/rust-hawk.git", rev = "4da77e4a7ced4ddc081669f05352b7314dd9bebc" }
mime_guess = "2.0"
vhost_server = { path = "../../vhost"}
