[package]
authors = ["Seinlin Li<seinlin.li@kaiostech.com> "]
edition = "2018"
license = "Apache-2.0"
name = "apps_service"
version = "0.1.0"

[dependencies]
actix-rt = "2.6"
android_utils = {path = "../../support/android-utils"}
base64 = "0.13"
blake2 = "0.10"
common = { path = "../../common" }
file-rotate = "0.6"
geckobridge = { path = "../geckobridge" }
http = "0.2.1"
hyper = "0.14"
hyperlocal = "0.8"
log = "0.4"
mkstemp-rs = "1.0.0"
nix = "0.25"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip"] }
rusqlite = { version = "0.29", features = ["bundled", "url", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
settings_service = {path = "../../services/settings"}
sqlite-utils = {path = "../../support/sqlite-utils"}
thiserror = "1.0"
threadpool = "1.8"
time = {version = "0.3", features = ["local-offset"]}
tokio = "1.0"
url = "2.1"
version-compare = "0.0.10"
vhost_server = {path = "../../vhost"}
zip = "0.5"
zip_utils = {git = "ssh://git@git.kaiostech.com/KaiOS/zip_utils.git", branch = "master"}

[build-dependencies]
common = {path = "../../common"}

[dev-dependencies]
actix-rt = "2.6"
actix-web = {version = "4.0", features = ["rustls"]}
env_logger = "0.9"
hawk = {git = "https://github.com/fabricedesre/rust-hawk.git", rev = "4da77e4a7ced4ddc081669f05352b7314dd9bebc"}
mime_guess = "2.0"
vhost_server = {path = "../../vhost"}
