[package]
name = "contacts_service"
version = "0.1.0"
authors = ["The KaiOS Team"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
android_utils = { path = "../../support/android-utils" }
chrono = "0.4"
common = { path = "../../common" }
ical = "0.7"
lazy_static = "1.4"
log = "0.4"
phonenumber = { git = "https://github.com/fabricedesre/rust-phonenumber.git", branch = "api-daemon" }
rusqlite = { version = "0.23", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-utils = { path = "../../support/sqlite-utils" }
thiserror = "1.0"
threadpool = "1.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[build-dependencies]
common = { path = "../../common" }

[dev-dependencies]
env_logger = "0.8"
