[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "AGPL-3.0-only"
name = "contentmanager_service"
version = "0.1.0"

[dependencies]
chrono = "0.4"
common = {path = "../../common"}
costaeres = {git = "https://github.com/capyloon/costaeres.git"}
dweb_service = {path = "../dweb"}
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1" }
ucan = "0.1"
uuid = {version = "1.1", features = ["v4"]}

[build-dependencies]
common = {path = "../../common"}
