[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "AGPL-3.0-only"
name = "contentmanager_service"
version = "0.1.0"

[dependencies]
async-std = {version = "1.9", features = ["attributes"]}
chrono = "0.4"
common = {path = "../../common"}
costaeres = {git = "https://github.com/capyloon/costaeres.git", rev="73f61c3e9f9be3f6827c650338129595db112d63"}
dweb_service = {path = "../dweb"}
log = "0.4"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1"
ucan = "0.1"
uuid = {version = "1.1", features = ["v4"]}

[build-dependencies]
common = {path = "../../common"}
