[package]
name = "deviceconfig_service"
version = "0.1.0"
authors = ["peng.ding <peng.ding@kaiostech.com>"]
edition = "2018"
license = "KaiOS"
publish = false

[dependencies]
android_utils = { path = "../../support/android-utils" }
common = { path = "../../common" }
geckobridge = { path = "../geckobridge" }
settings_service = { path = "../settings" }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
common = { path = "../../common" }
