[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "AGPL-3.0-only"
name = "dweb_service"
version = "0.1.0"

[dependencies]
async-std = {version = "1.9", features = ["attributes"]}
base64 = "0.13"
chrono = "0.4"
common = {path = "../../common"}
did-key = {git = "https://github.com/capyloon/did-key.rs.git", rev = "a608794d20a4c1b2c8155d2074f7b1dbe4092fb7"}
ed25519-zebra = "3.0"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
rusqlite = {version = "0.27", features = ["bundled"]}
serde = "1.0"
serde_json = "1.0"
sqlite-utils = {path = "../../support/sqlite-utils"}
thiserror = "1.0"
tokio = "1"
ucan = "0.6.0-alpha.1"
ucan-key-support = "0.4.0-alpha.1"
url = "2.2"

[build-dependencies]
common = {path = "../../common"}
