[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "AGPL-3.0-only"
name = "dweb_service"
version = "0.1.0"

[dependencies]
anyhow = "1.0" 
async-std = {version = "1.9", features = ["attributes"]} 
async-trait = "0.1" 
base64 = "0.13" 
bincode = "1.3" 
chrono = "0.4" 
common = {path = "../../common"} 
did-key = "0.2.1" 
ed25519-zebra = "3.0" 
hostname = "0.3" 
if-addrs = "0.7" # To match the version used in searchlight
iroh = {version = "0.4", default-features = false} 
lazy_static = "1.4" 
log = "0.4" 
parking_lot = "0.12" 
rusqlite = {version = "0.28", features = ["bundled"]} 
searchlight = "0.3" 
serde = "1.0" 
serde_json = "1.0" 
sqlite-utils = {path = "../../support/sqlite-utils"} 
thiserror = "1.0" 
tokio = "1" 
ucan = "0.1" 
ucan-key-support = "0.1" 
url = "2.2" 
uuid = {version = "1.1", features = ["v4"]} 

[build-dependencies]
common = {path = "../../common"}
