[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "AGPL-3.0-only"
name = "evm_service"
version = "0.1.0"

[dependencies]
common = {path = "../../common"}
ethers-core = "2"
ethers-providers = {version = "2.0", default-features = false, features = ["rustls"]}
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
tokio = "1.0"

[build-dependencies]
common = {path = "../../common"}
