[package]
name = "fota_service"
version = "0.1.0"
authors = ["Cliff Han(Xian) <cliff.han@kaiostech.com>"]
edition = "2018"
license = "KaiOS"
publish = false

[dependencies]
common = { path = "../../common" }
hamster = { path = "../../support/hamster" }
kota = { path = "../../support/kota" }
kus = { path = "../../support/kus" }
geckobridge = { path = "../geckobridge" }
settings_service = { path = "../settings" }
log = "0.4"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os="android")'.dependencies]
battery = { git = "ssh://git@git.kaiostech.com/rust-forks/rust-battery.git", branch="gonk" }
recovery = { path = "../../support/recovery" }

[build-dependencies]
common = { path = "../../common" }
