[package]
name = "geckobridge"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
common = { path = "../../common" }
contacts_service = { path = "../contacts" }
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
threadpool = "1.8"
url = "2.1"

[build-dependencies]
common = { path = "../../common" }
