[package]
name = "powermanager_service"
version = "0.1.0"
authors = ["Vincent Chang <vincent.chang@kaiostech.com> "]
edition = "2018"

[dependencies]
android_utils = { path = "../../support/android-utils" }
common = { path = "../../common" }
geckobridge = { path = "../geckobridge" }
hidl_utils = { path = "../../support/hidl-utils/" }
libc = "0.2"
light = { path = "../../support/light" }
log = "0.4"
parking_lot = "0.11"
recovery = { path = "../../support/recovery" }
serde = "1.0"

[build-dependencies]
common = { path = "../../common" }
