[package]
name = "powermanager_service"
version = "0.1.0"
authors = ["Vincent Chang <vincent.chang@kaiostech.com> "]
edition = "2018"
license = "Apache-2.0"

[dependencies]
common = { path = "../../common" }
geckobridge = { path = "../geckobridge" }
libc = "0.2"
log = "0.4"
parking_lot = "0.11"
serde = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_utils = { path = "../../support/android-utils" }
hidl_utils = { path = "../../support/hidl-utils/" }
light = { path = "../../support/light" }
recovery = { path = "../../support/recovery" }
power = { path = "../../support/power"}

[build-dependencies]
common = { path = "../../common" }
