[package]
name = "procmanager_service"
version = "0.1.0"
authors = ["Thinker Lee <thinker@codemud.net>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
log = "0.4"
serde = "1.0"
thiserror = "1.0"
itertools = "0.10.0"

[build-dependencies]
common = { path = "../../common" }
