[package]
name = "settings_service"
version = "0.1.1"
authors = ["The KaiOS Team"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
common = { path = "../../common" }
log = "0.4"
rusqlite = { version = "0.23", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlite-utils = { path = "../../support/sqlite-utils" }
thiserror = "1.0"
lazy_static = "1.4"

[build-dependencies]
common = { path = "../../common" }
