[package]
name = "tcpsocket_service"
version = "0.1.0"
authors = ["fei gao <fei.gao@kaiostech.com> "]
edition = "2018"
license = "Apache-2.0"

[dependencies]
common = { path = "../../common" }
log = "0.4"
mio = "0.6"
parking_lot = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
threadpool = "1.8"

[build-dependencies]
common = { path = "../../common" }
