[package]
name = "telephony_service"
version = "0.1.0"
authors = ["Jack Hung <jack.hung@kaiostech.com>"]
edition = "2018"
license = "KaiOS"
publish = false

[dependencies]
common = { path = "../../common" }
log = "0.4"
parking_lot = "0.11"
serde ="1.0"

[build-dependencies]
common = { path = "../../common" }
