[package]
name = "test_service"
version = "0.1.0"
authors = ["fei gao <fei.gao@kaiostech.com> "]
edition = "2018"
license = "Apache-2.0"

[dependencies]
common = { path = "../../common" }
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
common = { path = "../../common" }
