[package]
authors = ["fei gao <fei.gao@kaiostech.com> "]
edition = "2018"
license = "Apache-2.0"
name = "test_service"
version = "0.1.0"

[dependencies]
common = {path = "../../common"}
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
threadpool = "1.8"
url = {version = "2.2", features = ["serde"]}

[build-dependencies]
common = {path = "../../common"}
