[package]
name = "time_service"
version = "0.1.0"
authors = ["Jeff Lin <jeff.lin@kaiostech.com> "]
edition = "2018"
license = "Apache-2.0"

[dependencies]
android_utils = { path = "../../support/android-utils" }
common = { path = "../../common" }
libc = "0.2.70"
log = "0.4"
nix = "0.23"
serde = "1.0"
settings_service = { path = "../settings" }
threadpool = "1.8"
time = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
b2ghald = { git = "https://github.com/capyloon/b2ghald.git" }

[build-dependencies]
common = { path = "../../common" }
