[package]
name = "kauth"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "KaiOS"
publish = false

[dependencies]
base64 = "0.12"
hawk = { git = "https://github.com/taskcluster/rust-hawk.git", rev = "c0760a0d78eca2695f77b16122fc21cc3dbfd195" }
log = "0.4"
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
zip_utils = { git = "ssh://git@git.kaiostech.com/KaiOS/zip_utils.git", branch="master" }
android_utils = { path = "../android-utils" }
common = { path = "../../common" }
geckobridge = { path = "../../services/geckobridge" }
settings_service = { path = "../../services/settings" }

[dev-dependencies]
env_logger = "0.7"
